# Tabs2Chart

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  SHRED2CHART_GAMEPLAN.md  pyproject.toml  requirements.txt  shred2chart.spec
docs/gameplan/: architecture.md  current-state-archive.md  current-state.md  decision-log.md  handoff-log.md  legacy-gameplan-monolith.md  milestones.md  open-questions.md
packaging/: gui_entry.py
shred2chart/: __init__.py  __main__.py  blend.py  chart_writer.py  cli.py  config.py  emit.py  gpif_tempo.py  gpx_reader.py  gui.py  ingest.py  integration.py  ir.py  ir_gp.py  ir_gpif.py  mapper.py  mapping.py  media.py  moonscraper.py  synctrack.py  tempo.py  validation.py
shred2chart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_chart_pipeline.py  test_cli.py  test_emit.py  test_gpif_tempo.py  test_gpx_reader.py  test_gui.py  test_ingest.py  test_integration.py  test_integration_convert.py  test_ir.py  test_ir_gp.py  test_ir_gpif.py  test_mapping.py  test_media.py  test_moonscraper.py  test_synctrack.py  test_tempo.py
tests/fixtures/: sample.gp
tools/moonscraper-custom/: Build-ModdedCopy.ps1  Build-MoonscraperFork.ps1  Prepare-MoonscraperFork.ps1  README.md  Tabs2Chart.patch  Tabs2ChartAlignmentPlugin.cs
