[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shred2chart"
version = "0.1.0"
description = "Convert Guitar Pro tabs (.gp5/.gpx) into playable Clone Hero charts"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyGuitarPro>=0.10",
]

[project.scripts]
shred2chart = "shred2chart.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shred2chart*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
